hphp/hack/test/typecheck/class_prop_as_this.php.exp
File "class_prop_as_this.php", line 12, characters 5-23:
  this as C
File "class_prop_as_this.php", line 13, characters 5-21:
  this as C
File "class_prop_as_this.php", line 17, characters 5-19:
Invalid assignment (Typing[4110])
  File "class_prop_as_this.php", line 9, characters 24-24:
  Expected exactly the type `C`
  File "class_prop_as_this.php", line 9, characters 31-31:
  But got the nonexact type `C`
  File "class_prop_as_this.php", line 9, characters 24-24:
  Since `C` is not final
  File "class_prop_as_this.php", line 9, characters 31-31:
  this might not be a `C`
